scrollbar fix

--- a/styles/handoff.css
+++ b/styles/handoff.css
@@ -25,6 +25,19 @@ body {
   margin: 0;
 }
 
+body::-webkit-scrollbar {
+  width: 0.15rem;
+}
+ 
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: #17b17d;
+  outline: 0.05rem solid #17b17d;
+}
+
 /**
  * Render the `main` element consistently in IE.
  */
